# injectionguard

./: CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: fastapi_app.py  mcp_scanning.py  scan_input.py
scripts/: generate_assets.py
src/injectionguard/: __init__.py  canary.py  cli.py  detector.py  drift.py  mcp.py  middleware.py  rate.py  scoring.py  types.py
src/injectionguard/strategies/: __init__.py  encoding.py  heuristic.py  perplexity.py  structural.py
tests/: test_allowlist.py  test_canary.py  test_cli.py  test_detector.py  test_drift.py  test_edge_cases.py  test_encoding.py  test_heuristic.py  test_mcp.py  test_middleware.py  test_perplexity.py  test_rate.py  test_scoring.py  test_structural.py
