[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "injectionguard"
version = "0.4.0"
description = "Prompt injection detection for LLM applications and MCP servers"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [{name = "stef41"}]
keywords = [
    "prompt-injection", "llm-security", "mcp", "ai-safety",
    "jailbreak-detection", "owasp", "ai-agents", "guardrails",
    "claude-code", "chatgpt", "copilot", "content-safety",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]

[project.scripts]
injectionguard = "injectionguard.cli:main"

[project.urls]
Homepage = "https://github.com/stef41/injectionguard"
Repository = "https://github.com/stef41/injectionguard"
Issues = "https://github.com/stef41/injectionguard/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/injectionguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
